Date Picker for Birthday, ALL DONE

--- a/app/src/main/res/layout/registration_1.xml
+++ b/app/src/main/res/layout/registration_1.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary"
     android:layout_margin="10dp"
+    android:background="@color/colorPrimary"
     android:padding="20dp">
 
     <ScrollView
@@ -13,8 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
         android:layout_marginBottom="60dp"
-        android:scrollbars="none"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:scrollbars="none">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,23 +26,24 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp">
+
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/profile_photo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/circle_maroon_solid_nopadding"
-                    android:src="@drawable/ic_person_white_24px"/>
+                    android:src="@drawable/ic_person_white_24px" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/edit_photo"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_margin="4dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
+                    android:layout_margin="4dp"
                     android:background="@drawable/circle_white_solid"
-                    android:src="@drawable/ic_camera"
-                    />
+                    android:src="@drawable/ic_camera" />
+
                 <ProgressBar
                     android:id="@+id/photoProgress"
                     android:layout_width="40dp"
@@ -55,65 +57,66 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:theme="@style/TextInputTheme">
+
                 <EditText
                     android:id="@+id/field_email"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="textEmailAddress"
                     android:hint="Email*"
-                    android:maxLines="1"
+                    android:inputType="textEmailAddress"
                     android:layoutDirection="ltr"
-                    android:textColor="@color/textColorPrimary"
-                    />
+                    android:maxLines="1"
+                    android:textColor="@color/textColorPrimary" />
             </android.support.design.widget.TextInputLayout>
 
             <!--Pwd & Confirm Pwd Layout Hidden Purposely-->
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/layout_pwd"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:passwordToggleEnabled="true"
-                    app:passwordToggleTint="@color/colorPrimaryDark"
-                    app:errorEnabled="true"
-                    android:theme="@style/TextInputTheme"
-                    android:visibility="gone">
-                    <EditText
-                        android:id="@+id/field_pwd"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="Password"
-                        android:inputType="textPassword"
-                        android:maxLines="1"
-                        android:textColor="@color/textColorPrimary"
-                        />
-                </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/layout_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/TextInputTheme"
+                android:visibility="gone"
+                app:errorEnabled="true"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/colorPrimaryDark">
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/layout_retype_pwd"
+                <EditText
+                    android:id="@+id/field_pwd"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:passwordToggleEnabled="true"
-                    app:passwordToggleTint="@color/colorPrimaryDark"
-                    app:errorEnabled="true"
-                    android:theme="@style/TextInputTheme"
-                    android:visibility="gone">
-                    <EditText
-                        android:id="@+id/field_retype_pwd"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="Confirm Password"
-                        android:inputType="textPassword"
-                        android:maxLines="1"
-                        android:textColor="@color/textColorPrimary"
-                        />
-                </android.support.design.widget.TextInputLayout>
+                    android:layout_height="match_parent"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:textColor="@color/textColorPrimary" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/layout_retype_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:theme="@style/TextInputTheme"
+                android:visibility="gone"
+                app:errorEnabled="true"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/colorPrimaryDark">
+
+                <EditText
+                    android:id="@+id/field_retype_pwd"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Confirm Password"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:textColor="@color/textColorPrimary" />
+            </android.support.design.widget.TextInputLayout>
             <!--Pwd & Confirm Pwd Layout End-->
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layout_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true"
-                android:theme="@style/TextInputTheme">
+                android:theme="@style/TextInputTheme"
+                app:errorEnabled="true">
+
                 <EditText
                     android:id="@+id/field_name"
                     android:layout_width="match_parent"
@@ -121,14 +124,16 @@
                     android:hint="First Name*"
                     android:inputType="textPersonName"
                     android:maxLines="1"
-                    android:textColor="@color/textColorPrimary"/>
+                    android:textColor="@color/textColorPrimary" />
             </android.support.design.widget.TextInputLayout>
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layout_father_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true"
-                android:theme="@style/TextInputTheme">
+                android:theme="@style/TextInputTheme"
+                app:errorEnabled="true">
+
                 <EditText
                     android:id="@+id/field_father_name"
                     android:layout_width="match_parent"
@@ -136,14 +141,16 @@
                     android:hint="Fathers Name*"
                     android:inputType="textPersonName"
                     android:maxLines="1"
-                    android:textColor="@color/textColorPrimary"/>
+                    android:textColor="@color/textColorPrimary" />
             </android.support.design.widget.TextInputLayout>
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layout_middle_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true"
-                android:theme="@style/TextInputTheme">
+                android:theme="@style/TextInputTheme"
+                app:errorEnabled="true">
+
                 <EditText
                     android:id="@+id/field_middle_name"
                     android:layout_width="match_parent"
@@ -151,14 +158,16 @@
                     android:hint="Middle Name"
                     android:inputType="textPersonName"
                     android:maxLines="1"
-                    android:textColor="@color/textColorPrimary"/>
+                    android:textColor="@color/textColorPrimary" />
             </android.support.design.widget.TextInputLayout>
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layout_last_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true"
-                android:theme="@style/TextInputTheme">
+                android:theme="@style/TextInputTheme"
+                app:errorEnabled="true">
+
                 <EditText
                     android:id="@+id/field_last_name"
                     android:layout_width="match_parent"
@@ -166,52 +175,53 @@
                     android:hint="Last Name*"
                     android:inputType="textPersonName"
                     android:maxLines="1"
-                    android:textColor="@color/textColorPrimary"/>
+                    android:textColor="@color/textColorPrimary" />
             </android.support.design.widget.TextInputLayout>
+
             <TextView
                 android:id="@+id/gender_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:text="Gender*"
-                android:textSize="16sp"
                 android:textColor="@color/lightGrey"
-                 />
+                android:textSize="16sp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingVertical="5dp"
-                android:layout_below="@id/gender_title">
+                android:layout_below="@id/gender_title"
+                android:paddingVertical="5dp">
 
-                    <RelativeLayout
-                        android:id="@+id/gender_group"
-                        android:layout_width="match_parent"
+                <RelativeLayout
+                    android:id="@+id/gender_group"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal"
+                    android:paddingEnd="30dp"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="30dp"
+                    android:paddingStart="30dp">
+
+                    <Button
+                        android:id="@+id/btn_male"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="10dp"
-                        android:paddingLeft="30dp"
-                        android:paddingStart="30dp"
-                        android:paddingRight="30dp"
-                        android:paddingEnd="30dp">
-                        <Button
-                            android:id="@+id/btn_male"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Male"
-                            android:background="@drawable/shape_hollow_btn"
-                            android:textColor="@color/maroonish"/>
+                        android:background="@drawable/shape_hollow_btn"
+                        android:text="Male"
+                        android:textColor="@color/maroonish" />
 
-                        <Button
-                            android:id="@+id/btn_female"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Female"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentRight="true"
-                            android:background="@drawable/shape_hollow_btn"
-                            android:textColor="@color/maroonish"/>
-                    </RelativeLayout>
+                    <Button
+                        android:id="@+id/btn_female"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:background="@drawable/shape_hollow_btn"
+                        android:text="Female"
+                        android:textColor="@color/maroonish" />
+                </RelativeLayout>
 
             </RelativeLayout>
 
@@ -219,8 +229,8 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="10dp"
+                android:orientation="horizontal"
                 android:visibility="gone">
 
                 <com.hbb20.CountryCodePicker
@@ -230,67 +240,71 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
-                    app:ccp_defaultNameCode="US"
                     app:ccp_autoDetectCountry="true"
                     app:ccp_autoFormatNumber="true"
-                    />
+                    app:ccp_defaultNameCode="US" />
+
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/layout_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/ccp"
-                    android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:layout_toRightOf="@id/ccp"
                     android:theme="@style/TextInputTheme">
+
                     <EditText
                         android:id="@+id/field_phone"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:hint="Phone"
                         android:inputType="phone"
-                        android:maxLines="1"
                         android:layoutDirection="ltr"
+                        android:maxLines="1"
                         android:textColor="@color/textColorPrimary" />
                 </android.support.design.widget.TextInputLayout>
             </RelativeLayout>
-        <!--Phone Number Layout Ends-->
+            <!--Phone Number Layout Ends-->
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layout_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true"
-                android:theme="@style/TextInputTheme">
+                android:theme="@style/TextInputTheme"
+                app:errorEnabled="true">
+
                 <EditText
                     android:id="@+id/field_date"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:backgroundTint="@color/lightGrey"
+                    android:clickable="true"
+                    android:drawableEnd="@drawable/ic_date_black_24px"
+                    android:drawableRight="@drawable/ic_date_black_24px"
+                    android:focusable="false"
                     android:hint="DOB - dd/mm/yyyy"
                     android:inputType="date"
-                    android:maxLines="1"
                     android:layoutDirection="ltr"
-                    android:textColor="@color/textColorPrimary"
-                    android:backgroundTint="@color/lightGrey"
-                    android:drawableRight="@drawable/ic_date_black_24px"
-                    android:drawableEnd="@drawable/ic_date_black_24px"
-                    />
+                    android:maxLines="1"
+                    android:textColor="@color/textColorPrimary" />
             </android.support.design.widget.TextInputLayout>
 
-            </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
     <Button
         android:id="@+id/btn_next"
+        style="@style/maroonishButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/maroonishButtonStyle"
         android:layout_alignParentBottom="true"
-        android:text="Next"/>
+        android:text="Next" />
+
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_centerInParent="true"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 </RelativeLayout>
