--- a/app/src/main/res/layout/activity_screen_event_detail.xml
+++ b/app/src/main/res/layout/activity_screen_event_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -39,31 +40,30 @@
 
                     </LinearLayout>
 
+                    <Button
+                        android:id="@+id/btn_join_event"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:layout_alignParentBottom="true"
+                        style="@style/maroonishButtonStyle"
+                        android:text="@string/btn_event_join"
+                        android:visibility="gone"/>
 
+                    <Button
+                        android:id="@+id/btn_qr"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:layout_alignParentBottom="true"
+                        style="@style/greenButtonStyle"
+                        android:text="@string/btn_show_qr"
+                        android:visibility="gone"/>
                 </LinearLayout>
 
 
             </android.support.v4.widget.NestedScrollView>
-                <Button
-                    android:id="@+id/btn_join_event"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:layout_alignParentBottom="true"
-                    style="@style/maroonishButtonStyle"
 
-                    android:text="@string/btn_event_join"
-                    android:visibility="gone"/>
-
-                <Button
-                    android:id="@+id/btn_qr"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:layout_alignParentBottom="true"
-                    style="@style/greenButtonStyle"
-                    android:text="@string/btn_show_qr"
-                    android:visibility="gone"/>
         </RelativeLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.design.widget.CoordinatorLayout>
