--- a/app/src/main/res/layout/registration_2.xml
+++ b/app/src/main/res/layout/registration_2.xml
@@ -104,7 +104,7 @@
         app:errorEnabled="true"
         android:theme="@style/TextInputTheme">
 
-        <EditText
+        <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/field_sponsor"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -117,6 +117,7 @@
         android:id="@+id/register_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         style="@style/maroonishButtonStyle"
         android:text="Register"/>
 </LinearLayout>
