--- a/app/src/main/res/layout/screen_otp_confirm.xml
+++ b/app/src/main/res/layout/screen_otp_confirm.xml
@@ -79,7 +79,8 @@
                 android:text="30 secs to Resend the Code"
                 android:layout_marginTop="15dp"
                 android:layout_gravity="center_horizontal"
-                style="@style/label_heading" />
+                style="@style/label_heading"
+                android:visibility="gone"/>
         </LinearLayout>
 
 
