--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="height_bio_fields">60dp</dimen>
     <dimen name="textSizeSmall">14sp</dimen>
+    <dimen name="error_small">8sp</dimen>
 </resources>
