--- a/app/src/main/res/layout/row_event.xml
+++ b/app/src/main/res/layout/row_event.xml
@@ -60,7 +60,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
+                    android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
@@ -73,7 +73,8 @@
                         android:id="@+id/field_location"
                         style="@style/label_heading"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+
                         android:layout_marginTop="2dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginStart="10dp"
