--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -77,7 +77,7 @@
 
     <style name="TextInputTheme" parent="Theme.AppCompat">
         <!-- Hint color and label color in FALSE state -->
-        <item name="android:textColorHint">@color/lightGrey</item>
+        <item name="android:textColorHint">@color/textColorSecondary</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/textColorPrimary</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
